# seabang

./: .gitignore  CMakeLists.txt  Makefile  Makefile.am  README.md  clean-autotools-crap.sh  configure.ac  curses-hello-world.c  hello_world.cpp  make-build-scripts.sh  make_and_install.sh  matrixcode.c
examples/: LFSR  LFSR.cpp  arguments-test  c-codetest.c  curses-hello-world.c  hello_world  hello_world.cpp  matrixcode  overide-compiler.cpp  std-filesystem-tests.cpp  thread_test.cpp
source/: Makefile.am  TinyTools.cpp  TinyTools.h  dependencies.cpp  dependencies.h  execute_command.cpp  execute_command.h  misc.cpp  misc.h  seabang.cpp  shell.cpp  shell.h
